--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nodemon": "^1.14.6"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "concurrently": "^3.5.1",
     "cors": "^2.8.5",
     "express": "^4.16.2"
